fixed carousel button visibility

--- a/css/carousel.css
+++ b/css/carousel.css
@@ -107,7 +107,7 @@ body {
 		margin-top: 60px;
 		width: 40%;
 		height: 63.5%;
-		margin-right: 5%;
+		margin-right: 7%;
 		float: right;
 		z-index: 1000;
 	}
